--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,32 +7,56 @@
     tools:context=".MainActivity">
 
     <TableLayout
-        android:layout_width="408dp"
-        android:layout_height="290dp"
+        android:id="@+id/tableLayout2"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="82dp">
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.93">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button2"
-                android:layout_width="119dp"
+                android:id="@+id/clearBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="1" />
+                android:layout_weight="1"
+                android:text="@string/Clear" />
 
             <Button
-                android:id="@+id/button"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="2" />
+                android:id="@+id/parenthesisBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:layout_weight="1"
+                android:text="@string/parenthesis" />
 
             <Button
-                android:id="@+id/button19"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="3" />
+                android:id="@+id/exponentBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/exponent" />
+
+            <Button
+                android:id="@+id/divideBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/divide" />
         </TableRow>
 
         <TableRow
@@ -40,22 +64,40 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button20"
-                android:layout_width="119dp"
+                android:id="@+id/sevenBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="4" />
+                android:layout_weight="1"
+                android:text="@string/seven" />
 
             <Button
-                android:id="@+id/button21"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="5" />
+                android:id="@+id/eightBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/eight" />
 
             <Button
-                android:id="@+id/button22"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="6" />
+                android:id="@+id/nineBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/nine" />
+
+            <Button
+                android:id="@+id/multiplyBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/multiply" />
         </TableRow>
 
         <TableRow
@@ -63,22 +105,41 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button23"
-                android:layout_width="119dp"
+                android:id="@+id/fourBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="7" />
+                android:layout_weight="1"
+                android:text="@string/four" />
 
             <Button
-                android:id="@+id/button24"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="8" />
+                android:id="@+id/fiveBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/five" />
 
             <Button
-                android:id="@+id/button25"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="9" />
+                android:id="@+id/sixBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/six" />
+
+            <Button
+                android:id="@+id/subtractBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/subtract" />
+
         </TableRow>
 
         <TableRow
@@ -86,76 +147,41 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button35"
-                android:layout_width="119dp"
+                android:id="@+id/twoBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="0" />
+                android:layout_weight="1"
+                android:text="@string/two" />
 
             <Button
-                android:id="@+id/button36"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="+" />
+                android:id="@+id/threeBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
 
-            <Button
-                android:id="@+id/button37"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="-" />
-
-            <Button
-                android:id="@+id/button32"
-                android:layout_width="119dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:layout_weight="1"
+                android:text="@string/three" />
 
             <Button
-                android:id="@+id/button33"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="Button" />
+                android:id="@+id/oneBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
 
-            <Button
-                android:id="@+id/button34"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/button29"
-                android:layout_width="119dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:layout_weight="1"
+                android:text="@string/one" />
 
             <Button
-                android:id="@+id/button30"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="Button" />
+                android:id="@+id/plusBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
 
-            <Button
-                android:id="@+id/button31"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/button26"
-                android:layout_width="119dp"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:layout_weight="1"
 
-            <Button
-                android:id="@+id/button27"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/button28"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="Button" />
+                android:text="@string/plus" />
         </TableRow>
 
         <TableRow
@@ -163,31 +189,61 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button38"
-                android:layout_width="119dp"
+                android:id="@+id/plusminusBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="/" />
+                android:layout_weight="1"
+                android:text="@string/plusMinus" />
 
             <Button
-                android:id="@+id/button39"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="Clear" />
+                android:id="@+id/zeroBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/zero" />
 
             <Button
-                android:id="@+id/button40"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="x" />
+                android:id="@+id/pointBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:layout_weight="1"
+                android:text="@string/point" />
+
+            <Button
+                android:id="@+id/equalsBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/equals" />
         </TableRow>
     </TableLayout>
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="350dp"
-        android:layout_height="41dp"
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="399dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button68"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/backspace"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
